--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Alfi Fadhilah</div></div>
         </footer>
         <!-- Bootstrap core JS-->
-        <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/bootstrap.bundle.min.js"></script>
         <!-- SimpleLightbox plugin JS-->
         <script src="assets/plugin/simplelightbox.min.js"></script>
         <!-- Core theme JS-->
